# pyModeS

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  build.py  data.txt  decoder.py  hatch_build.py  mkdocs.yml  pyproject.toml  run.py  run_test.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-publish.yml  pypi-publish.yml  run-tests.yml  test.yml
doc/: Makefile  README.rst  conf.py  index.rst  pyModeS.rst  requirements.txt
doc/source/: conf.py  index.rst  modules.rst  pyModeS.c_common.rst  pyModeS.common.rst  pyModeS.decoder.acas.rst  pyModeS.decoder.adsb.rst  pyModeS.decoder.allcall.rst  pyModeS.decoder.bds.bds05.rst  pyModeS.decoder.bds.bds06.rst  pyModeS.decoder.bds.bds08.rst  pyModeS.decoder.bds.bds09.rst  pyModeS.decoder.bds.bds10.rst  pyModeS.decoder.bds.bds17.rst  pyModeS.decoder.bds.bds20.rst  pyModeS.decoder.bds.bds30.rst  pyModeS.decoder.bds.bds40.rst  pyModeS.decoder.bds.bds44.rst  pyModeS.decoder.bds.bds45.rst  pyModeS.decoder.bds.bds50.rst  pyModeS.decoder.bds.bds53.rst  pyModeS.decoder.bds.bds60.rst  pyModeS.decoder.bds.rst  pyModeS.decoder.commb.rst  pyModeS.decoder.common.rst  pyModeS.decoder.ehs.rst  pyModeS.decoder.els.rst  pyModeS.decoder.rst  pyModeS.decoder.surv.rst  pyModeS.decoder.uncertainty.rst  pyModeS.decoder.uplink.rst  pyModeS.extra.aero.rst  pyModeS.extra.rst  pyModeS.extra.tcpclient.rst  pyModeS.rst  pyModeS.streamer.rst  pyModeS.streamer.screen.rst  pyModeS.streamer.stream.rst
doc/source/_templates/: layout.html
docs/: api.md  changelog.md  index.md  interesting_messages.md  migration.md  pipe.md  quickstart.md
pyModeS/: __init__.py  adsb.py  c_common.pxd  c_common.pyi  c_common.pyx  common.py  ehs.py  els.py  modes_common.py  py_common.py  util.py
pyModeS/c_decoder/: adsb.pyx  common.pxd  common.pyx
pyModeS/c_decoder/bds/: bds05.pyx  bds06.pyx  bds08.pyx  bds09.pyx
pyModeS/decoder/: __init__.py  acas.py  adsb.py  allcall.py  c_common.pxd  c_common.pyx  commb.py  common.py  describe.py  ehs.py  els.py  fastcrc.py  modes.py  modes_common.py  surv.py  uncertainty.py  uplink.py  util.py
pyModeS/decoder/adsb_ua_parameters/: NACp.csv  NACv.csv  NIC_v1.csv  NIC_v2.csv  NUCp.csv  NUCv.csv  SIL.csv
pyModeS/decoder/bds/: __init__.py  bds05.py  bds06.py  bds08.py  bds09.py  bds10.py  bds17.py  bds20.py  bds30.py  bds40.py  bds44.py  bds45.py  bds50.py  bds53.py  bds60.py  bds61.py  bds61_st1.py  bds61_st2.py  bds62.py
pyModeS/decoder/flarm/: __init__.py  core.c  core.h  core.pxd  decode.pyi  decode.pyx
pyModeS/encoder/: __init__.py
pyModeS/encoder/bds/: bds05.py  bds06.py  bds08.py  bds09.py
pyModeS/extra/: aero.py  beastclient.py  rtlreader.py  tcpclient.py
pyModeS/extra/demod2400/: __init__.py  core.pyi  core.pyx  demod2400.c  demod2400.h  rtlreader.py
pyModeS/streamer/: aero.py  decode.py  modeslive  modeslive.py  pmslive  pmstream.py  screen.py  source.py  stream.py
pyModeS/vec/: common.py  ctor.py  types.py  util.py
scripts/: .last_benchmark.md  bench_pms_v2.py  benchmark_cpr.py  benchmark_decode.py  build_airport_db.py  gen_migration_table.py  smoke_test.sh  smoke_test_alpha.sh  smoke_test_cli.sh  snapshot_v2.py
src/pyModeS/: .gitignore  __init__.py  _aero.py  _altcode.py  _callsign.py  _idcode.py  _pipe.py  _schema.py  _uncertainty.py  _v2_compat.py  _v2_removed.py  adsb.py  c_common.pxd  c_common.pyi  c_common.pyx  commb.py  common.py  common.pyi  core.py  ehs.py  els.py  errors.py  message.py  py_common.py  util.py
src/pyModeS/bds/: __init__.py
src/pyModeS/cli/: __init__.py  __main__.py  _args.py  _sink.py  _source.py  _tui.py  decode.py  live.py
src/pyModeS/data/: __init__.py
src/pyModeS/decoder/: __init__.py  _base.py  acas.py  adsb.py  allcall.py  commb.py  ehs.py  els.py  surv.py  uncertainty.py  uplink.py
src/pyModeS/decoder/bds/: __init__.py  _infer.py  bds05.py  bds06.py  bds08.py  bds09.py  bds10.py  bds17.py  bds20.py  bds30.py  bds40.py  bds44.py  bds45.py  bds50.py  bds60.py  bds61.py  bds62.py  bds65.py
src/pyModeS/decoder/flarm/: __init__.py  decode.pyi
src/pyModeS/extra/: __init__.py  aero.py  rtlreader.py  tcpclient.py
src/pyModeS/position/: __init__.py  _airports.py  _cpr.py
src/pyModeS/streamer/: __init__.py  decode.py  modeslive.py  screen.py  source.py
src/pymodes/: __init__.py  _altcode.py  _bits.py  _callsign.py  _idcode.py  _pipe.py  _schema.py  _uncertainty.py  _v2_compat.py  core.py  errors.py  message.py
src/pymodes/cli/: __init__.py  __main__.py  _args.py  _sink.py  _source.py  _tui.py  decode.py  live.py
src/pymodes/data/: __init__.py  airports.py
src/pymodes/decoder/: __init__.py  _base.py  acas.py  adsb.py  allcall.py  commb.py  surv.py
src/pymodes/decoder/bds/: __init__.py  _helpers.py  _infer.py  bds05.py  bds06.py  bds08.py  bds09.py  bds10.py  bds17.py  bds20.py  bds30.py  bds40.py  bds44.py  bds45.py  bds50.py  bds60.py  bds61.py  bds62.py  bds65.py
src/pymodes/position/: __init__.py  _airports.py  _cpr.py
tests/: adsb.csv  benchmark.py  decode_test_data.py  run.py  sample_data_test.py  sample_run_adsb.py  sample_run_bds.py  sample_run_c_adsb.py  sample_run_commb.py  sample_run_ehs.py  test_acas.py  test_adsb.py  test_aero.py  test_airports.py  test_allcall.py  test_altcode_gray.py  test_batch.py  test_bds.py  test_bds05.py  test_bds06.py  test_bds08.py  test_bds09.py  test_bds61.py  test_bds62.py  test_bds65.py  test_bds_commb.py  test_bds_inference.py  test_bits.py  test_build_airport_db.py  test_c_adsb.py  test_c_common.py  test_callsign.py  test_cli_args.py  test_cli_decode.py  test_cli_live.py  test_cli_source.py  test_commb.py  test_common.py  test_common_contract.py  test_core.py  (+20 more)
tests/data/: sample_data_commb_df21.csv  sample_data_ehs_df20.csv  sample_data_ehs_df21.csv
tests/fixtures/: golden_v2.json
tests/vec/: data.py  test_common.py
