[project]
name = "pyModeS"
version = "3.0.0"
description = "Python Mode-S and ADS-B Decoder"
authors = [{ name = "Junzi Sun", email = "git@junzis.com" }]
license = { text = "GNU GPL v3" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.11"
# v3 has no runtime dependencies. The decoder is pure Python on
# top of stdlib (int shifts + math + socket + json + argparse).
# The optional `tui` extra pulls in `textual` for `modes live --tui`.
dependencies = []

[project.scripts]
modes = "pyModeS.cli:main"
# `modeslive` was v2's beast streamer console script. It's not
# used in v3 — kept registered here so `modeslive` at the shell
# prints a migration hint pointing at `modes live` / `modes
# decode` instead of shell "command not found".
modeslive = "pyModeS._v2_removed:modeslive_main"

[project.optional-dependencies]
tui = ["textual>=0.50"]

[project.urls]
homepage = "https://mode-s.org"
repository = "https://github.com/junzis/pyModeS"
issues = "https://github.com/junzis/pyModeS/issues"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.8",
    # textual is declared as an optional runtime extra
    # (`pyModeS[tui]`), but it's also a dev requirement so mypy can
    # statically check src/pyModeS/cli/_tui.py on a fresh clone.
    "textual>=0.50",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["scripts/bench_pms_v2.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "NPY",    # numpy
    "NPY201", # numpy 2 compat
    "DTZ",    # flake8-datetimez
    "RUF",    # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["pyModeS"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/pyModeS"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyModeS"]
# Explicit src layout for editable installs. Without this,
# hatchling + editables PEP 660 ends up writing an empty
# _pymodes.pth when the distribution name is PEP-503-normalized
# (pyModeS → pymodes). Pointing dev-mode-dirs at src/ restores
# the simple `sys.path += src/` behavior.
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyModeS",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
